Improve folding regions with elif/else blocks
Fixes an issue where the folding regions for elif/else block
was not ended correctly, causing the region to continue to
the end of the document.

Reported in issue #9

--- a/tests/template.html
+++ b/tests/template.html
@@ -26,7 +26,26 @@ body{
 
 <body>
 
-{% block content %}{% endblock %}
+{% block content %}
+
+
+    {% if True %}
+        A
+    {% elif False %}
+        B
+    {% elif False %}
+        {% if False %}
+            C
+        {% else %}
+            D
+        {% endif %}
+        E
+    {% else %}
+        F
+    {% endif %}
+
+
+{% endblock %}
 
 </body>
 </html>
